force-app/main/default/objects/Mule_API__mdt/Mule_API__mdt.object-meta.xml
<CustomObject>
    <label>Mule API</label>
    <pluralLabel>Mule APIs</pluralLabel>
</CustomObject>