force-app/main/default/objects/Mule_API__mdt/fields/Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Type__c</fullName>
    <defaultValue>&apos;Basic&apos;</defaultValue>
    <label>Authentication Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Keys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>