force-app/main/default/objects/Mule_API__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base_URL</label>
    <type>Url</type>
</CustomField>