force-app/main/default/objects/Mule_API__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <type>TextArea</type>
</CustomField>