force-app/main/default/objects/Mule_API__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <type>TextArea</type>
</CustomField>