force-app/main/default/objects/Mule_API__mdt/fields/Error_Email_Body_Prelude__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Body_Prelude__c</fullName>
    <description>Opening statement for the Email that is meant to alert of an error associated with an API call.</description>
    <inlineHelpText>Example: &quot;A Mule API interface error occurred.  Error = &quot;</inlineHelpText>
    <label>Error Email Body Prelude</label>
    <type>TextArea</type>
</CustomField>