force-app/main/default/objects/Mule_API__mdt/fields/Error_Email_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Sender_Name__c</fullName>
    <label>Error Email Sender Name</label>
    <type>TextArea</type>
</CustomField>