force-app/main/default/objects/Mule_API__mdt/fields/Error_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Subject__c</fullName>
    <description>Brief subject line for the error email intending to alert of a Mule API interface issue.</description>
    <inlineHelpText>Example: &quot;Mule API Interface Issue&quot;</inlineHelpText>
    <label>Error Email Subject</label>
    <type>TextArea</type>
</CustomField>