force-app/main/default/objects/Mule_API__mdt/fields/Error_Email_To_Address1__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_To_Address1__c</fullName>
    <label>Error Email To Address1</label>
    <type>Email</type>
</CustomField>