force-app/main/default/objects/Mule_API__mdt/fields/filterType__c.field-meta.xml
<CustomField>
    <fullName>filterType__c</fullName>
    <label>filterType</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>