force-app/main/default/objects/Mule_API__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>250</length>
    <type>Text</type>
</CustomField>