force-app/main/default/objects/Mule_API__mdt/fields/Timeout_value__c.field-meta.xml
<CustomField>
    <fullName>Timeout_value__c</fullName>
    <label>Timeout_value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>