force-app/main/default/objects/Mule_API__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>250</length>
    <type>Text</type>
</CustomField>