force-app/main/default/objects/Mule_API__mdt/fields/VFilters__c.field-meta.xml
<CustomField>
    <fullName>VFilters__c</fullName>
    <label>VFilters</label>
    <type>TextArea</type>
</CustomField>